kube/city-rentals/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: city-deployment
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: city
        image: city
        resources:
          limits:
            cpu: "100m"
            memory: "128Mi"
        ports:
        - containerPort: 3000
      imagePullSecrets:
        - name: regcred
