kube/city-rentals/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: city-service
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 3000
