kube/city-rentals/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: city-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: default
spec:
  rules:
    - host: cityrentalsandsales.co.nz
      http:
        paths:
          - backend:
              serviceName: city-service
              servicePort: 80
